--- a/05 - cinemapedia/pubspec.yaml
+++ b/05 - cinemapedia/pubspec.yaml
@@ -16,6 +16,7 @@ dependencies:
   window_manager: ^0.3.8
   card_swiper: ^3.0.1
   animate_do: ^3.3.4
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
