--- a/05 - cinemapedia/pubspec.yaml
+++ b/05 - cinemapedia/pubspec.yaml
@@ -9,7 +9,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  go_router: ^13.2.4
+  go_router: ^14.1.1
   flutter_dotenv: ^5.1.0
   dio: ^5.4.3+1
   flutter_riverpod: ^2.5.1
@@ -17,11 +17,15 @@ dependencies:
   card_swiper: ^3.0.1
   animate_do: ^3.3.4
   intl: ^0.19.0
+  isar: ^3.1.0+1
+  isar_flutter_libs: ^3.1.0+1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_lints: ^3.0.0
+  flutter_lints: ^4.0.0
+  isar_generator: ^3.1.0+1
+  build_runner: ^2.4.10
 
 flutter:
   uses-material-design: true
