--- a/05 - cinemapedia/pubspec.yaml
+++ b/05 - cinemapedia/pubspec.yaml
@@ -4,7 +4,7 @@ publish_to: "none"
 version: 0.1.0
 
 environment:
-  sdk: ">=3.3.1 <4.0.0"
+  sdk: ">=3.3.3 <4.0.0"
 
 dependencies:
   flutter:
@@ -17,15 +17,15 @@ dependencies:
   card_swiper: ^3.0.1
   animate_do: ^3.3.4
   intl: ^0.19.0
-  isar: ^3.1.0+1
-  isar_flutter_libs: ^3.1.0+1
+  isar: ^3.1.0
+  isar_flutter_libs: ^3.1.0
   path_provider: ^2.1.3
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^4.0.0
-  isar_generator: ^3.1.0+1
+  isar_generator: ^3.1.0
   build_runner: ^2.4.10
 
 flutter:
