--- a/05 - cinemapedia/pubspec.yaml
+++ b/05 - cinemapedia/pubspec.yaml
@@ -17,8 +17,8 @@ dependencies:
   card_swiper: ^3.0.1
   animate_do: ^3.3.4
   intl: ^0.19.0
-  isar: ^3.1.0
-  isar_flutter_libs: ^3.1.0
+  isar: ^3.1.0+1
+  isar_flutter_libs: ^3.1.0+1
   path_provider: ^2.1.3
 
 dev_dependencies:
