--- a/07 - push_app/pubspec.yaml
+++ b/07 - push_app/pubspec.yaml
@@ -20,7 +20,9 @@ dependencies:
   equatable: ^2.0.5
   get_it: ^7.7.0
 
+  firebase_core: ^3.6.0
   firebase_messaging: ^15.1.3
+  flutter_local_notifications: ^16.3.1+1
 
 dev_dependencies:
   flutter_test:
